[tool.poetry]
name = "bml-connect-python"
version = "1.1.0"
description = "Python SDK for Bank of Maldives Connect API with synchronous and asynchronous support"
authors = ["Fayaz (Quill) <fayaz.quill@gmail.com>"]
maintainers = ["Fayaz (Quill) <fayaz.quill@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/quillfires/bml-connect-python"
repository = "https://github.com/quillfires/bml-connect-python"
documentation = "https://github.com/quillfires/bml-connect-python/wiki"
keywords = ["bml", "bank-of-maldives", "payment", "sdk", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
packages = [{ include = "bml_connect", from = "src" }]

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
pytest-cov = ">=4.0"
black = { version = ">=23.0", python = ">=3.8" }
flake8 = { version = ">=6.0", python = ">=3.8.1" }
mypy = { version = ">=1.0", python = ">=3.8" }
isort = { version = ">=5.0", python = ">=3.8" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/bml_connect"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]