[tool.poetry]
name = "bml-connect-python"
version = "1.1.1"
description = "Python SDK for Bank of Maldives Connect API with synchronous and asynchronous support"
authors = ["Fayaz (Quill) <fayaz.quill@gmail.com>"]
maintainers = ["Fayaz (Quill) <fayaz.quill@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/quillfires/bml-connect-python"
repository = "https://github.com/quillfires/bml-connect-python"
documentation = "https://github.com/quillfires/bml-connect-python/wiki"
keywords = ["bml", "bank-of-maldives", "payment", "sdk", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
packages = [{ include = "bml_connect", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23.0"
requests = ">=2.28.0"
aiohttp = "^3.13.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
pytest-cov = ">=4.0"
black = ">=23.0"
flake8 = ">=6.0"
mypy = ">=1.0"
isort = ">=5.0"
flake8-pyproject = "^1.2.4"
types-requests = "^2.32.4.20260107"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E501", "E203"]
per-file-ignores = [
    "tests/*:F401",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["override", "attr-defined", "assignment", "no-any-return", "union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/bml_connect"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]